# anos

./: .gitignore  ANOS-SYSTEM-PROMPT.md  CHANGELOG.md  Dockerfile  LICENSE  PROJECT-STATUS.md  README.md  RESEARCH-ARCHITECTURE.md  ROADMAP.md  anos-init  audit.jsonl  build-iso.sh  docker-compose.yml  install.sh  watcher-alerts.jsonl  watcher.yaml
.github/workflows/: build-iso.yml  ci.yml  release.yml
anos-cli/: Cargo.toml
anos-cli/src/: main.rs
anosd/: Cargo.toml
anosd/src/: agentic.rs  audit.rs  context.rs  hooks.rs  intent.rs  ipc.rs  main.rs  memory.rs  provider.rs  snapshot.rs  spawn.rs  sse.rs  streaming.rs  systemmap.rs  tools.rs  upgrade.rs  vector_memory.rs  watcher.rs
config/: providers.yaml
docker/: Dockerfile  Dockerfile.iso-builder  build-iso.sh  docker-entrypoint.sh
skills/certbot/: SKILL.md
skills/cron/: SKILL.md
skills/filesystem/: SKILL.md
skills/firewall/: SKILL.md
skills/gui/: SKILL.md
skills/kernel/: SKILL.md
skills/log/: SKILL.md
skills/network/: SKILL.md
skills/package/: SKILL.md
skills/process/: SKILL.md
skills/provider/: SKILL.md
skills/security/: SKILL.md
skills/self-upgrade/: SKILL.md
skills/service/: SKILL.md
skills/ssh/: SKILL.md
skills/system/: SKILL.md
skills/user/: SKILL.md
skills/webserver/: SKILL.md
