[package]
name = "anos-cli"
version = "0.8.2"
edition = "2021"
description = "Anos AI Native OS - CLI Client"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rustyline = "15"
colored = "3"
uuid = { version = "1", features = ["v4"] }
